--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "prepublishOnly": "npx tsc",
+    "prepublishOnly": "rm -rf ./dist && npx tsc",
     "watch": "npx tsc --watch",
     "test-server": "cd tests && npx ts-node-dev --respawn --transpile-only xpresser.ts"
   },
