--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     // "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
     // "sourceMap": true,                     /* Generates corresponding '.map' file. */
     // "outFile": "./",                       /* Concatenate and emit output to single file. */
-    "outDir": "./dist",
+    "outDir": "./",
     /* Redirect output structure to the directory. */
     "rootDir": "./",
     /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
@@ -90,7 +90,6 @@
   "exclude": [
     "types",
     "tests",
-    "dist",
     "xpresser.d.ts"
   ]
 }
