--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@xpresser/abolish",
   "version": "1.12.0",
-  "description": "Using Abolish validator in xpresserjs",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "description": "Using Abolish validator in Xpresserjs",
+  "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "prepublishOnly": "npx tsc",
     "watch": "npx tsc --watch",
@@ -19,11 +19,11 @@
     "@xpresser/plugin-tools": "^1.2.1"
   },
   "devDependencies": {
-    "abolish": "^4.8.21",
-    "prettier": "^2.5.1",
+    "abolish": "^4.11.2",
+    "prettier": "^2.6.2",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.6.2",
-    "xpresser": "^0.27.1"
+    "typescript": "^4.6.3",
+    "xpresser": "^0.27.4"
   },
   "keywords": [
     "xpresser",
