--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@xpresser/plugin-tools": "^1.2.5"
   },
   "devDependencies": {
-    "abolish": "^6.0.0",
-    "prettier": "^2.6.2",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.6.3",
-    "xpresser": "^0.27.4"
+    "abolish": "^6.0.3",
+    "prettier": "^2.7.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.4",
+    "xpresser": "^0.29.1"
+  },
+  "peerDependencies": {
+    "abolish": "^6.0.0"
   },
   "keywords": [
     "xpresser",
